--- a/3.analysis/5.reconstruction.ipynb
+++ b/3.analysis/5.reconstruction.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "26ecd6cf",
    "metadata": {},
    "outputs": [],
@@ -286,14 +286,14 @@
     "scaler = MinMaxScaler()\n",
     "\n",
     "# Apply the scaler to the numeric columns\n",
-    "dependency_df[dependency_df.select_dtypes(include=['float64', 'int']).columns] = scaler.fit_transform(\n",
-    "    dependency_df.select_dtypes(include=['float64', 'int'])\n",
+    "dependency_df[dependency_df.select_dtypes(include=[\"number\"]).columns] = scaler.fit_transform(\n",
+    "    dependency_df.select_dtypes(include=[\"number\"])\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ffbe586a",
    "metadata": {},
    "outputs": [],
@@ -301,8 +301,8 @@
     "train_and_test_subbed_dir = pathlib.Path(\"../0.data-download/data/train_and_test_subbed.parquet\")\n",
     "train_and_test_subbed = pd.read_parquet(train_and_test_subbed_dir)\n",
     "\n",
-    "train_and_test_subbed[train_and_test_subbed.select_dtypes(include=['float64', 'int']).columns] = scaler.fit_transform(\n",
-    "    train_and_test_subbed.select_dtypes(include=['float64', 'int'])\n",
+    "train_and_test_subbed[train_and_test_subbed.select_dtypes(include=[\"number\"]).columns] = scaler.fit_transform(\n",
+    "    train_and_test_subbed.select_dtypes(include=[\"number\"])\n",
     ")\n",
     "\n",
     "# Convert DataFrame to NumPy and then Tensor\n",
