--- a/5.drug-dependency/7.pinwheel_plots.ipynb
+++ b/5.drug-dependency/7.pinwheel_plots.ipynb
@@ -4611,9 +4611,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_merge_df = pd.concat(pathway_merge_df, ignore_index=True)\n",
-    "drug_merge_df = pd.concat(drug_merge_df, ignore_index=True)\n",
-    "corum_merge_df = pd.concat(corum_merge_df, ignore_index=True)"
+    "pathway_final = pd.concat(pathway_merge_df, ignore_index=True)\n",
+    "drug_final = pd.concat(drug_merge_df, ignore_index=True)\n",
+    "corum_final = pd.concat(corum_merge_df, ignore_index=True)"
    ]
   },
   {
@@ -4622,9 +4622,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drug_merge_df.to_parquet(\"./results/all_drug_results.parquet\")\n",
-    "corum_merge_df.to_parquet(\"./results/all_corum_results.parquet\")\n",
-    "pathway_merge_df.to_parquet(\"./results/all_reactome_results.parquet\")"
+    "drug_final.to_parquet(\"./results/all_drug_results.parquet\")\n",
+    "corum_final.to_parquet(\"./results/all_corum_results.parquet\")\n",
+    "pathway_final.to_parquet(\"./results/all_reactome_results.parquet\")"
    ]
   }
  ],
