--- a/5.drug-dependency/8.spider_plots.ipynb
+++ b/5.drug-dependency/8.spider_plots.ipynb
@@ -43,55 +43,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "08894e82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'matplotlib' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 48\u001b[0m\n\u001b[1;32m     42\u001b[0m         wrapped \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m...\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     44\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m wrapped\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mplace_labels_polar\u001b[39m(\n\u001b[0;32m---> 48\u001b[0m     ax: \u001b[43mmatplotlib\u001b[49m\u001b[38;5;241m.\u001b[39maxes\u001b[38;5;241m.\u001b[39mAxes,\n\u001b[1;32m     49\u001b[0m     angles: List[\u001b[38;5;28mfloat\u001b[39m],\n\u001b[1;32m     50\u001b[0m     labels: List[\u001b[38;5;28mstr\u001b[39m],\n\u001b[1;32m     51\u001b[0m     radius: \u001b[38;5;28mfloat\u001b[39m\n\u001b[1;32m     52\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     54\u001b[0m \u001b[38;5;124;03m    Place labels around a polar plot at a given radius.\u001b[39;00m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m     56\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m angle, label \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(angles[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m], labels):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'matplotlib' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "def truncate_label(label, max_chars_per_line=22, max_total_words=4, max_lines=2):\n",
+    "def clean_label(x: str) -> str:\n",
     "    \"\"\"\n",
-    "    Truncate a label to at most `max_total_words` words and `max_lines` lines,\n",
-    "    inserting line breaks so no line exceeds `max_chars_per_line` characters.\n",
+    "    Clean or override specific long labels before truncation.\n",
+    "    \"\"\"\n",
+    "    # Polymerase switching\n",
+    "    if \"Polymerase Switching\" in x:\n",
+    "        return \"Polymerase Switching\"\n",
+    "\n",
+    "    # Negative MET regulation\n",
+    "    if \"Negative Regulation Of MET\" in x or \"Negative Regulation of MET\" in x:\n",
+    "        return \"Negative MET Regulation\"\n",
+    "\n",
+    "    return truncate_label(x)\n",
+    "\n",
+    "\n",
+    "def truncate_label(\n",
+    "    label: str,\n",
+    "    max_chars_per_line: int = 22,\n",
+    "    max_total_words: int = 4,\n",
+    "    max_lines: int = 2\n",
+    ") -> str:\n",
+    "    \"\"\"\n",
+    "    Truncate a label according to character and line limits.\n",
     "    \"\"\"\n",
     "    words = label.split()\n",
     "    short = \" \".join(words[:max_total_words])\n",
     "    \n",
-    "    # Wrap into lines\n",
+    "    # Wrap\n",
     "    lines = textwrap.wrap(short, width=max_chars_per_line)\n",
     "    \n",
-    "    # Enforce the max number of lines\n",
+    "    # clamp to max lines\n",
     "    if len(lines) > max_lines:\n",
     "        lines = lines[:max_lines]\n",
-    "    \n",
+    "\n",
     "    wrapped = \"\\n\".join(lines)\n",
-    "    \n",
-    "    # Add ellipsis if truncated (either by word or by line)\n",
-    "    if len(words) > max_total_words or len(lines) >= max_lines and len(lines) < len(textwrap.wrap(short, width=max_chars_per_line)):\n",
+    "\n",
+    "    # Determine if truncated\n",
+    "    if (\n",
+    "        len(words) > max_total_words or \n",
+    "        (len(lines) >= max_lines and len(lines) < len(textwrap.wrap(short, width=max_chars_per_line)))\n",
+    "    ):\n",
     "        wrapped += \"...\"\n",
     "        \n",
     "    return wrapped\n",
-    "    \n",
-    "def place_labels_polar(ax, angles, labels, radius):\n",
+    "\n",
+    "\n",
+    "def place_labels_polar(\n",
+    "    ax,\n",
+    "    angles,\n",
+    "    labels,\n",
+    "    radius: float\n",
+    ") -> None:\n",
     "    \"\"\"\n",
-    "    Place labels on a polar axis just outside the circle,\n",
-    "    slightly adjust vertical placement for top/bottom wedges.\n",
+    "    Place labels around a polar plot at a given radius.\n",
     "    \"\"\"\n",
     "    for angle, label in zip(angles[:-1], labels):\n",
     "        r = radius\n",
     "\n",
-    "        # left/right alignment\n",
+    "        # left / right alignment\n",
     "        if 0 <= angle <= np.pi/2 or 3*np.pi/2 <= angle <= 2*np.pi:\n",
     "            ha = 'left'\n",
     "        else:\n",
     "            ha = 'right'\n",
     "\n",
-    "        ax.text(angle, r, label, fontsize=9, color='black',\n",
-    "                ha=ha, va='center', wrap=True)\n",
+    "        ax.text(\n",
+    "            angle, r, label,\n",
+    "            fontsize=9,\n",
+    "            color='black',\n",
+    "            ha=ha,\n",
+    "            va='center',\n",
+    "            wrap=True\n",
+    "        )\n",
+    "\n",
+    "    return None\n",
     "\n",
     "\n",
-    "def make_radar(ax, df, feature_col, title, global_max, num_circles=5):\n",
+    "def make_radar(\n",
+    "    ax,\n",
+    "    df: pd.DataFrame,\n",
+    "    feature_col: str,\n",
+    "    title: str,\n",
+    "    global_max: float,\n",
+    "    num_circles: int = 5\n",
+    ") -> None:\n",
     "    \"\"\"\n",
-    "    Draw one radar plot onto given axis (ax) with light grey reference circles.\n",
+    "    Draw a radar plot on an existing polar matplotlib axis.\n",
     "    \"\"\"\n",
     "    df = df[df[\"ModelID\"].isin(model_ids)].copy()\n",
     "\n",
@@ -103,24 +157,32 @@
     "    )\n",
     "    top_features = top_by_model[feature_col].drop_duplicates().tolist()\n",
     "    n_vars = len(top_features)\n",
-    "    labels = [truncate_label(x) for x in top_features]\n",
+    "    labels = [clean_label(x) for x in top_features]\n",
     "\n",
     "    # Angles\n",
     "    angles = np.linspace(0, 2 * np.pi, n_vars, endpoint=False).tolist()\n",
     "    angles += [angles[0]]\n",
     "\n",
-    "    # Draw light grey circles\n",
-    "    circle_levels = np.linspace(0, global_max, num_circles + 1)[1:]  # skip 0\n",
+    "    # Reference circles\n",
+    "    circle_levels = np.linspace(0, global_max, num_circles + 1)[1:]\n",
     "    for r in circle_levels:\n",
     "        circle_vals = [r] * (n_vars + 1)\n",
-    "        ax.plot(angles, circle_vals, color=\"grey\", linestyle=\"--\", linewidth=1, zorder=0)\n",
+    "        ax.plot(\n",
+    "            angles, circle_vals,\n",
+    "            color=\"grey\", linestyle=\"--\",\n",
+    "            linewidth=1, zorder=0\n",
+    "        )\n",
     "\n",
     "    # Plot each model\n",
     "    for mid in model_ids:\n",
     "        subset = df[df[\"ModelID\"] == mid]\n",
+    "\n",
     "        merged = pd.DataFrame({feature_col: top_features}).merge(\n",
-    "            subset[[feature_col, score_col]], on=feature_col, how=\"left\"\n",
+    "            subset[[feature_col, score_col]],\n",
+    "            on=feature_col,\n",
+    "            how=\"left\"\n",
     "        )\n",
+    "\n",
     "        values = merged[score_col].fillna(0).tolist()\n",
     "        values += [values[0]]\n",
     "\n",
@@ -129,17 +191,20 @@
     "        ax.scatter(angles, values, color=model_colors[mid],\n",
     "                   s=30, edgecolor=\"black\", zorder=5)\n",
     "\n",
-    "    # Axis + grid styling\n",
+    "    # Axis styling\n",
     "    ax.set_ylim(0, global_max * 1.25)\n",
     "    ax.set_xticks([])\n",
     "    ax.set_yticks([])\n",
     "    ax.set_aspect(\"equal\")\n",
     "\n",
+    "    # Labels\n",
     "    label_radius = global_max * 1.4\n",
     "    place_labels_polar(ax, angles, labels, label_radius)\n",
     "\n",
     "    # Title\n",
-    "    ax.set_title(title, fontsize=18, pad=30, fontweight=\"bold\", y=1)"
+    "    ax.set_title(title, fontsize=18, pad=30, fontweight=\"bold\", y=1)\n",
+    "\n",
+    "    return None"
    ]
   },
   {
@@ -202,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gene_dependency_representations",
+   "display_name": "gene_dependency_representations_real",
    "language": "python",
    "name": "python3"
   },
@@ -216,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
